# Password-Manager

./: .gitignore  CMakeLists.txt  README.md  main.py
frontEnd/: addWindow.py  createPasswdWindow.py  datapath.py  displayWindow.py  loginWindow.py  mainWindow.py
src/: account.cpp  account.h  bindings.cpp  func.cpp  func.h  security.cpp  security.h
